--- a/VolundGameStudioWebsite/Views/Home/About.cshtml
+++ b/VolundGameStudioWebsite/Views/Home/About.cshtml
@@ -1,27 +1,30 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>Völund Game Studio</h2>
-
-<div>
-    <p>
-        Völund Game Studio is a new indie studio in Stockholm founded by Conny 'Gentlemandapper' Siponen.
-    </p>
-    <p>
-        The goal is to develop and evolve the gameplay in a wide range of genre and to spread our knowledge of game design to future generations
-    </p>
-</div>
-
-<div>
-    <h1>Team</h1>
-    <div class="row">
-        <div class="col-md-3">
-            <img src="~/images/myself.png" style="max-width:230px;"/>
-        </div>
-        <div class="col-md-7">
-            <h3>Conny Siponen</h3>
-            <p><strong>Role: </strong> Programmer, Gameplay designer</p>
-            <p><strong>Background: </strong>Gaming since birth, studying and breaking apart game mechanics 20+ years and has beaten more games than most gamers and game developers out there </p>
+<div style="background-color:white; padding:0px 5px 5px 5px;">
+    <div>
+        <h1>Völund Game Studio</h1>
+        <p>
+            Völund Game Studio is a new indie studio in Stockholm founded by Conny 'Gentlemandapper' Siponen.
+        </p>
+        <p>
+            The goal is to develop and evolve the gameplay in a wide range of genre and to spread our knowledge of game design to future generations
+        </p>
+    </div>
+    <div>
+        <h1>The studio members</h1>
+        <div class="row">
+            <div class="col-md-3 center">
+                <div style="background-color:white;">
+                    <div style="">
+                        <img src="~/images/me.jpg" style="" />
+                        <div class="team-name">Conny Siponen</div>
+                        <div class="row team-role">
+                            Coder, Gameplay designer
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
