--- a/VolundSpringSite/src/main/resources/static/public/css/index.css
+++ b/VolundSpringSite/src/main/resources/static/public/css/index.css
@@ -4,8 +4,6 @@ body {
 }
 
 header {
-	width:100%;
-	height:25vh;
 	color:white;
 	font-size:4em;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url('../images/tj-foo-grand-library.jpg');
@@ -13,4 +11,49 @@ header {
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+
+
+
+.gameLayoutGrid {
+	display:grid;
+	grid-template-columns:repeat(3,1fr);
+}
+
+#indexlayoutGrid {
+	display: grid;
+	background-color:#16000c;
+	height:100vh;
+	grid-template-rows: minmax(150px,15vh) auto 50px;
+  	grid-template-columns: minmax(150px,10vw) auto;
+  	
+	grid-template-areas: "head head"
+						 "nav  main"
+    					 "nav  foot";
+}
+
+#indexlayoutGrid > header {
+  grid-area: head;
+  background-color: black;
+}
+
+#indexlayoutGrid > nav {
+  grid-area: nav;
+  min-width:100px;
+  height:100%;
+}
+
+#indexlayoutGrid > main {
+	grid-area: main;
+	color:white;
+	background-color: black;
+}
+
+#indexlayoutGrid > footer {
+  grid-area: foot;
+  color:white;
+  background-color: black;
+  padding:15px;
+  text-align:center;
+  font-size:0.9em;
 }
