--- a/VolundSpringSite/src/main/resources/templates/backlog/addGame.html
+++ b/VolundSpringSite/src/main/resources/templates/backlog/addGame.html
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<link rel="stylesheet" type="text/css" href="/css/index.css" />
+	<link rel="stylesheet" type="text/css" href="/css/layout.css" />
 	<link rel="stylesheet" type="text/css" href="/css/menues.css" />
+	<link rel="stylesheet" type="text/css" href="/css/forms.css" />
 </head>
 <body>
 <div id="indexlayoutGrid">
-	<header>
-	</header>
-	
+	<div th:replace="fragments/header"></div>
 	<div th:replace="fragments/mainMenu"></div>
 		
 	<main class="contentGrid">
@@ -16,14 +15,12 @@
 			<ul>
 				<li th:each="err: ${#fields.errors('*')}" th:text="${err}"} />
 			</ul>
-			<div class="tab">
-				<h1>Add Game</h1>
-				<input id="gameName" type="text" th:field="*{gameName}" placeholder="Game name"/>
-				<input id="gameGenre" type="text" th:field="*{genre}" placeholder="Genre" />
-				<input id="gameReleaseDate" type="text" th:field="*{releaseYear}"placeholder="Release year" />
-				<input type="submit" value="Submit"/>
-				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-			</div>
+			<h1>Add Game</h1>
+			<input id="gameName" type="text" th:field="*{gameName}" placeholder="Game name"/>
+			<input id="gameGenre" type="text" th:field="*{genre}" placeholder="Genre" />
+			<input id="gameReleaseDate" type="text" th:field="*{releaseYear}"placeholder="Release year" />
+			<input type="submit" value="Add Game"/>
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 		</form>
 	</main>
 	
