--- a/VolundSpringSite/src/main/resources/templates/backlog/gameLibrary.html
+++ b/VolundSpringSite/src/main/resources/templates/backlog/gameLibrary.html
@@ -1,14 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/css/index.css" />
+	<link rel="stylesheet" type="text/css" href="/css/layout.css" />
 	<link rel="stylesheet" type="text/css" href="/css/menues.css" />
 </head>
 <body>
 <div id="indexlayoutGrid">
-	<header>
-	</header>
-	
+	<div th:replace="fragments/header"></div>
 	<div th:replace="fragments/mainMenu"></div>
 	
 	<main class="contentGrid">
