--- a/VolundSpringSite/src/main/resources/templates/backlog/removeGame.html
+++ b/VolundSpringSite/src/main/resources/templates/backlog/removeGame.html
@@ -11,15 +11,20 @@
 	<div th:replace="fragments/mainMenu"></div>
 		
 	<main class="contentGrid">
-		<form action="/backlog/addGame" th:object="${gameForm}" method="post">
+		<form action="/backlog/removeGame" th:object="${gameForm}" method="post">
 			<ul>
 				<li th:each="err: ${#fields.errors('*')}" th:text="${err}"} />
 			</ul>
-			<h1>Add Game</h1>
-			<input id="gameName" type="text" th:field="*{gameName}" placeholder="Game name"  autocomplete="off"/><br/>
-			<input id="gameGenre" type="text" th:field="*{genre}" placeholder="Genre"  autocomplete="off"/><br/>
-			<input id="gameReleaseYear" type="text" th:field="*{releaseYear}"placeholder="Release year"  autocomplete="off"/><br/>
-			<input type="submit" value="Add Game"/>
+			<h1>Remove Game</h1>
+			<p>Do you really want to remove this game from the library?</p>
+			<div>
+				<label>Id:</label><p th:text="*{id}" /></p>
+				<label>Game name: </label><p th:text="*{gameName}"></p>
+				<label>Genre: </label><p th:text="*{genre}"></p>
+				<label>Release year: </label><p th:text="*{releaseYear}"></p>
+			</div>
+			<input type="hidden" th:field="*{id}" th:value="*{id}"/>			
+			<input type="submit" value="Remove Game"/>
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 		</form>
 	</main>
