Add OneToOne relationship between UnfinishedGames and Game with Hibernate
Add OneToOne relationship between UnfinishedGames and Game with Hibernate

--- a/VolundSpringSite/src/main/resources/templates/fragments/mainMenu.html
+++ b/VolundSpringSite/src/main/resources/templates/fragments/mainMenu.html
@@ -1,6 +1,7 @@
 	<nav>
 		<ul class="menu">
-			<a href="/backlog/addGame"><li id="addGameBtn">Add Game</li></a>
+			<a href="/backlog/addGame"><li id="addGameBtn">Add New Game</li></a>
+			<a href="/backlog/advancedUpdateGame"><li id="UpdateGameBtn">Update Game</li></a>
 			<a href="/backlog/library"><li id="gameLibraryBtn">Game Library</li></a>
 			
 			<a href="#"><li id="unfinishedGamesBtn">Unfinished Games</li></a>
